syntax = "proto3";

package unindexer.namespace;
option go_package = "./;proto";


enum NamespaceFdb {
  BtcLastBlock = 0;
  BtcTransaction = 1;
  BtcAddress = 2;

  EthLastBlock = 3;
  EthBalance = 4;
  EthNativeBalance = 5;
}